# docs/swagger.json
@@ -36,7 +36,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Поле для сортировки (например, 'name')",
+                        "description": "Поле для сортировки ",
                         "name": "sort",
                         "in": "query"
                     },
@@ -64,8 +64,14 @@
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера",
+                    "401": {
+                        "description": "Отказано в доступе: ошибка токена",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Актер не найден",
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
@@ -120,6 +126,12 @@
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
+                    "401": {
+                        "description": "Отказано в доступе: ошибка токена",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
                     "403": {
                         "description": "Доступ запрещен: отсутствие необходимой роли",
                         "schema": {
@@ -128,12 +140,6 @@
                     },
                     "404": {
                         "description": "Актер не найден",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера",
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
@@ -189,19 +195,13 @@
                         }
                     },
                     "401": {
-                        "description": "Отказано в доступе: ошибка извлечения токена",
+                        "description": "Отказано в доступе: ошибка токена",
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
                     "403": {
                         "description": "Доступ запрещен: отсутствие необходимой роли",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера",
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
@@ -248,6 +248,12 @@
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
+                    "401": {
+                        "description": "Отказано в доступе: ошибка токена",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
                     "403": {
                         "description": "Доступ запрещен: отсутствие необходимой роли",
                         "schema": {
@@ -256,12 +262,6 @@
                     },
                     "404": {
                         "description": "Актер не найден",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера",
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
@@ -422,8 +422,14 @@
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера",
+                    "401": {
+                        "description": "Отказано в доступе: ошибка токена",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Фильмы не найден",
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
@@ -478,8 +484,20 @@
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера",
+                    "401": {
+                        "description": "Отказано в доступе: ошибка токена",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Доступ запрещен: отсутствие необходимой роли",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Фильм не найден",
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
@@ -534,8 +552,14 @@
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера",
+                    "401": {
+                        "description": "Отказано в доступе: ошибка токена",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Доступ запрещен: отсутствие необходимой роли",
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
@@ -582,8 +606,14 @@
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера",
+                    "401": {
+                        "description": "Отказано в доступе: ошибка токена",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Доступ запрещен: отсутствие необходимой роли",
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
